--- a/TankMan/.classpath
+++ b/TankMan/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="lib" path="libs/gdx-backend-android.jar" sourcepath="E:/pro/libgdx2/lib9.8/sources/gdx-backend-android-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/gdx.jar" sourcepath="E:/pro/libgdx2/lib9.8/sources/gdx-sources.jar"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
